Update code for not-nullable