@@ -4,31 +4,31 @@ import org.dcistudent.geolocationstatisticsapi.entities.Log;
 import org.dcistudent.geolocationstatisticsapi.mappers.manager.LogDataModelMapper;
 import org.dcistudent.geolocationstatisticsapi.models.data.LogDataModel;
 import org.dcistudent.geolocationstatisticsapi.repositories.LogRepository;
+import org.jetbrains.annotations.NotNull;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.ZonedDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class LogManager {
 
-  LogRepository logRepository;
-  LogDataModelMapper logDataModelMapper;
+  @NotNull LogRepository logRepository;
+  @NotNull LogDataModelMapper logDataModelMapper;
 
-  public LogManager(LogRepository logRepository, LogDataModelMapper logDataModelMapper) {
+  public LogManager(@NotNull LogRepository logRepository, @NotNull LogDataModelMapper logDataModelMapper) {
     this.logRepository = logRepository;
     this.logDataModelMapper = logDataModelMapper;
   }
 
-  public List<LogDataModel> findLogsByLimit(Integer limit) {
+  public @NotNull List<LogDataModel> findLogsByLimit(@NotNull Integer limit) {
     return this.convertToDataModel(this.logRepository.findWithLimit(limit));
   }
 
   @Transactional
-  public void log(int level, String message) {
+  public void log(int level, @NotNull String message) {
     logRepository.insert(
         UUID.randomUUID().toString(),
         level,
@@ -37,12 +37,12 @@ public class LogManager {
     );
   }
 
-  private List<LogDataModel> convertToDataModel(List<Log> list) {
+  private @NotNull List<LogDataModel> convertToDataModel(@NotNull List<Log> list) {
     return list.stream().map(log -> logDataModelMapper.mapToDataModel(
         log.getId(),
         log.getLevel(),
         log.getDatetime(),
         log.getMessage()
-    )).collect(Collectors.toList());
+    )).toList();
   }
 }
